Closed Bug 1394011 Opened 7 years ago Closed 7 years ago

APZ assert with WebRender turned on

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: jrmuizel, Assigned: kats)

References

Details

Attachments

(2 files)

Assertion failure: result, at /Users/jrmuizel/source/gecko/gfx/layers/apz/src/APZCTreeManager.cpp:2268
#01: mozilla::layers::APZCTreeManager::GetAPZCAtPoint(mozilla::layers::HitTestingTreeNode*, mozilla::gfx::PointTyped<mozilla::ParentLayerPixel, float> const&, mozilla::layers::HitTestResult*, mozilla::layers::HitTestingTreeNode**)[/Users/jrmuizel/source/gecko/obj-x86_64-apple-darwin13.4.0/dist/NightlyDebug.app/Contents/MacOS/XUL +0x1d99bc6]

I have some patches applied but I don't think they'd impact this.
I'll see if I can figure out what's going on here. Do you have any STR?
Assignee: nobody → bugmail
Think I just hit this:

Assertion failure: result, at /Users/ABeingessner/dev/gecko/gfx/layers/apz/src/APZCTreeManager.cpp:2268
Hit MOZ_CRASH(Aborting on channel error.) at /Users/ABeingessner/dev/gecko/ipc/glue/MessageChannel.cpp:2535
Crash Annotation GraphicsCriticalError: |[C0][GFX1-]: Receive IPC close with reason=AbnormalShutdown (t=1.37746) Hit MOZ_CRASH(MachExceptionHandler: Failed to forward to the previous handler!) at /Users/ABeingessner/dev/gecko/js/src/ds/MemoryProtectionExceptionHandler.cpp:642

repro: fresh debug build of tip, turned on webrender and layers-free (no webrendest) in about:config, *without* disabling APZ. Instantly crashes.
Thanks, I can repro now. Looking into it.
Comment on attachment 8902238 [details]
Bug 1394011 - Extract helper function to compute the root ScrollMetadata.

https://reviewboard.mozilla.org/r/173760/#review179154
Attachment #8902238 - Flags: review?(mstange) → review+
Comment on attachment 8902239 [details]
Bug 1394011 - Place the root ScrollMetadata on the tree we send to APZ in layers-free webrender mode.

https://reviewboard.mozilla.org/r/173762/#review179156
Attachment #8902239 - Flags: review?(mstange) → review+
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d150d8d67eba
Extract helper function to compute the root ScrollMetadata. r=mstange
https://hg.mozilla.org/integration/autoland/rev/fb438fe5524d
Place the root ScrollMetadata on the tree we send to APZ in layers-free webrender mode. r=mstange
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: