Bug 1394011 - Extract helper function to compute the root ScrollMetadata. r=mstange

MozReview-Commit-ID: G8G7hI0aBWY